fixed alignment issues up top, added masthead

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,6 +12,7 @@ body {
   width: 90%;
   height: 1450px;
   padding: 30px;
+  margin: 0 auto;
 }
 
 a {
@@ -66,11 +67,12 @@ h3 {
 #homepage-nameplate {
   text-align: bottom;
   text-decoration: none;
-  margin-left: 0;
+  margin: 0 auto;
 }
 
 #content {
     padding-top: 2.5%;
+    margin: 0 auto;
 }
 
 #column1 {
@@ -166,3 +168,12 @@ h3 {
     width: 40px;
     height: 51px;
     vertical-align: top
+}
+
+.masthead {
+    display: block;
+    height: 20px;
+    width: 40%;
+    margin: 0 auto;
+    text-align: center;
+}
